# rust_backend_project

./: Cargo.toml
migrations/: 20240413163923_create_subscriptions_table.sql
scripts/: init_db.sh
src/: lib.rs  main.rs
tests/: health_check.rs
